added hover css to buttons

--- a/client/Breed.html
+++ b/client/Breed.html
@@ -81,10 +81,10 @@
 
     <!-- Clear Buttons -->
     <div class="col-sm-12 flexBox-breed">
-      <button type="button" class="clearButton" id="clearDad" disabled="true">
+      <button type="button btn btn-primary" class="clearButton" id="clearDad" disabled="true">
         <div class="clearText">Remove Daddy</div>
       </button>
-      <button type="button" class="clearButton" id="clearMom" disabled="true">
+      <button type="button btn btn-primary" class="clearButton" id="clearMom" disabled="true">
         <div class="clearText">Remove Mommy</div>
       </button>
     </div>
@@ -140,7 +140,7 @@
 
     <!-- Breed Button-->
     <div class="col-sm-12 flexBox-breed">
-      <button type="button" id="breed">
+      <button type="button btn btn-primary" id="breed">
         <div class="child">Breed</div>
       </button>
     </div>
