--- a/client/Factory.html
+++ b/client/Factory.html
@@ -265,9 +265,15 @@
         </div>
     </div>
 
-    <button type="button" class="btn btn-primary" id="defaultButton">Default Kitty</button>
-    <button type="button" class="btn btn-info" id="randomButton">Random Kitty</button>
-    <button type="button" class="btn btn-success" id="createButton">Create Kitty</button>
+    <button type="button" class="btn btn-primary" id="defaultButton">
+      <div class="defaultKit">Default</div>
+    </button>
+    <button type="button" class="btn btn-info" id="randomButton">
+      <div class="randomKit">Random</div>
+    </button>
+    <button type="button" class="btn btn-success" id="createButton">
+      <div class="createKit">Create Kitty</div>
+    </button>
 
 
     <div class="alert alert-success" role="alert" id="kittyCreation" style="display:none">
