--- a/client/index.html
+++ b/client/index.html
@@ -70,6 +70,7 @@
       <h1 id="cyber-font-home">
         Cyber <span id="kitty-font-home">Kitties</span>
       </h1>
+      <div class="homepageKitty kittySliding"></div>
     </div>
   </div>
 
