--- a/client/Breed.html
+++ b/client/Breed.html
@@ -143,6 +143,7 @@
       <button type="button btn btn-primary" id="breed">
         <div class="child">Breed</div>
       </button>
+      <div class="childImg"></div>
     </div>
 
     </body>
