--- a/client/Breed.html
+++ b/client/Breed.html
@@ -144,6 +144,7 @@
         <div class="child">Breed</div>
       </button>
       <div class="childImg"></div>
+      <div class="childData"></div>
     </div>
 
     </body>
