--- a/client/Breed.html
+++ b/client/Breed.html
@@ -140,7 +140,7 @@
 
     <!-- Breed Button-->
     <div class="col-sm-12 flexBox-breed">
-      <button type="button btn btn-primary" id="breed">
+      <button type="button btn btn-primary" id="breed" disabled="true">
         <div class="child">Breed</div>
       </button>
       <div class="childImg"></div>
