--- a/client/Breed.html
+++ b/client/Breed.html
@@ -62,10 +62,13 @@
     </nav>
 
     <!--Title Text-->
-    <div class="container p-5" style="margin-top: -1vh;margin-bottom: 10vh;">
-        <div align="center">
-        <h1 id="cyber-factory-header">Breed</h1>
-        <p id="kitty-factory-header">Soon to Be Parents</p>
+    <div>
+        <div class="title">
+            <div align="center">
+              <h1 id="cyber-factory-header">Breed</h1>
+              <p id="kitty-factory-header">Soon to Be Parents</p>
+            </div>
+        </div>
     </div>
 
     <!--Parent Kitties-->
@@ -145,6 +148,13 @@
       </button>
       <div class="childImg"></div>
       <div class="childData"></div>
+    </div>
+
+
+    <div class="footer">
+        <footer>
+            <p>Ivan on Tech Academy Bootcamp July 2020</p>
+        </footer>
     </div>
 
     </body>
