update to marketplace

--- a/client/Factory.html
+++ b/client/Factory.html
@@ -24,21 +24,17 @@
 
 
 <body>
+  <header>
+    <div class="header-text">
+    <a class="navbar-brand nav-head" href="index.html"><span id="cyber-font-header">Cyber </span><span id="kitty-font-header">Kitties</span></a>
+  </div>
+  </header>
 
-<!--NavBar-->
-<header>
-  <div class="col-sm-12">
-  <a class="navbar-brand nav-head" href="index.html"><span id="cyber-font-header">Cyber </span><span id="kitty-font-header">Kitties</span></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-</div>
-</header>
-<!--NavBar-->
-  <nav class="navbar sticky-top navbar-expand-lg navbar-light" id="navigation">
+  <!--NavBar-->
+  <nav class="navbar sticky-top navbar-expand-sm navbar-light" id="navigation">
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="index.html"><span id="cyber-font-nav">Home</span><span class="sr-only">(current)</span></a>
         </li>
@@ -50,6 +46,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Breed.html" id="myKitties"><span id="cyber-font-nav">Breed</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Marketplace.html" id="myKitties"><span id="kitty-font">Marketplace</span></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -65,8 +64,6 @@
       </ul>
     </div>
   </nav>
-
-
 
 <!--Title Text-->
     <div class="container p-5" style="margin-top: -1vh;margin-bottom: 10vh;">
