--- a/client/Marketplace.html
+++ b/client/Marketplace.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
 
-    <title>Academy Kitties/Breed</title>
+    <title>Academy Kitties/Marketplace</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/animations.css">
@@ -15,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/factory.css">
     <link rel="stylesheet" href="assets/css/frontend.css">
     <link rel="stylesheet" href="assets/css/page.css">
+
   </head>
 
 
@@ -61,43 +61,20 @@
       </div>
     </nav>
 
-    <!--Title Text-->
-    <div>
-        <div class="title">
-            <div align="center">
-              <h1 id="cyber-factory-header">Breed</h1>
-              <p id="kitty-factory-header">Soon to Be Parents</p>
-            </div>
-        </div>
-    </div>
-
-    <!--Parent Kitties-->
     <!--Modal Buttons-->
     <div class="col-sm-12 flexBox-breed">
-        <button class="dadKitty" id="dadId" data-toggle="modal" data-target="#dadModal">
-          <div class="dadDisplay">Choose a Daddy</div>
-        </button>
-        <button class="momKitty" id="momId" data-toggle="modal" data-target="#momModal">
-          <div class="momDisplay">Choose a Mommy</div>
+        <button class="sellerKitty" id="sellerId" data-toggle="modal" data-target="#sellerModal">
+          <div class="sellerDisplay">Sell a Kitty</div>
         </button>
     </div>
 
-    <!-- Clear Buttons -->
-    <div class="col-sm-12 flexBox-breed">
-      <button type="button btn btn-primary" class="clearButton" id="clearDad" disabled="true">
-        <div class="clearText">Remove Daddy</div>
-      </button>
-      <button type="button btn btn-primary" class="clearButton" id="clearMom" disabled="true">
-        <div class="clearText">Remove Mommy</div>
-      </button>
-    </div>
 
     <!-- Modals -->
-    <div class="modal fade" id="dadModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="sellerModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-xl modal-dialog-scrollable modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Choose Parent</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Choose Kitty to sell</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -105,51 +82,29 @@
           <div class="modal-body">
             <div class="row">
               <div class="col-12">
-                <div class="flexBox parents"></div>
+                <div class="flexBox availKitties"></div>
               </div>
             </div>
           </div>
           <div class="modal-footer">
-            <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-            <button type="button" id="saveDad" class="btn btn-primary" data-dismiss="modal">Save</button>
+            <button type="button" id="sell_Kitty" class="btn btn-primary" data-dismiss="modal">Save</button>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="modal fade" id="momModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-xl modal-dialog-scrollable modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Choose Parent</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="row">
-              <div class="col-12">
-                <div class="flexBox parents"></div>
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-            <button type="button" id="saveMom" class="btn btn-primary" data-dismiss="modal">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- Breed Button-->
-    <div class="col-sm-12 flexBox-breed">
-      <button type="button btn btn-primary" id="breed" disabled="true">
-        <div class="child">Breed</div>
+    <!--Set Kitty Price-->
+    <div class="kitty-being-sold"></div>
+
+    <form method="post" action="#">
+      <label for="currency-field" id="priceTitle">Price:</label>
+      <br>
+      <input type="text" name="currency-field" id="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">
+      <button type="submit" id="submitPrice">
+        <div class="sell-btn">Sell</div>
       </button>
-      <div class="childImg"></div>
-      <div class="childData"></div>
-    </div>
-
+    </form>
 
     <div class="footer">
         <footer>
@@ -157,8 +112,10 @@
         </footer>
     </div>
 
-    </body>
+  </body>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/currencyformatter.js/2.2.0/currencyFormatter.min.js" integrity="sha512-zaNuym1dVrK6sRojJ/9JJlrMIB+8f9IdXGzsBQltqTElXpBHZOKI39OP+bjr8WnrHXZKbJFdOKLpd5RnPd4fdg==" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
@@ -171,5 +128,6 @@
   <script src="assets/js/catFactory.js"></script>
   <script src="assets/js/displayKitties.js"></script>
   <script src="assets/js/breeder.js"></script>
+  <script src="assets/js/marketplace.js"></script>
 
 </html>
