market contract bug fix

--- a/client/Marketplace.html
+++ b/client/Marketplace.html
@@ -106,6 +106,8 @@
       </button>
     </form>
 
+    <button type="button" id="btn2" name="button">Hello</button>
+
     <div class="footer">
         <footer>
             <p>Ivan on Tech Academy Bootcamp July 2020</p>
@@ -122,6 +124,7 @@
 
   <script src="assets/js/web3.min.js"></script>
   <script src="./abi.js"></script>
+  <script src="./abiMarketplace.js"></script>
   <script src="./main.js"></script>
   <script src="assets/js/colors.js"></script>
   <script src="assets/js/catSettings.js"></script>
