update to market page

--- a/client/Marketplace.html
+++ b/client/Marketplace.html
@@ -106,7 +106,9 @@
     </button>
 
     <div class="allKittiesBeingSold">
+    </div>
 
+    <div class="kitty-inventory">
     </div>
 
     <div class="footer">
