buy function update

--- a/client/Marketplace.html
+++ b/client/Marketplace.html
@@ -131,7 +131,7 @@
     <div class="allKittiesBeingSold">
     </div>
 
-    <div class="flexBox kitty-inventory">
+    <div class="flexBox-sell kitty-inventory">
     </div>
 
     <button type="button" name="button" id="buyKittyBtn">Buy</button>
