--- a/client/Marketplace.html
+++ b/client/Marketplace.html
@@ -158,7 +158,7 @@
   <script src="assets/js/catSettings.js"></script>
   <script src="assets/js/catFactory.js"></script>
   <script src="assets/js/displayKitties.js"></script>
-  <script src="assets/js/breeder.js"></script>
+  <!--<script src="assets/js/breeder.js"></script>-->
   <script src="assets/js/marketplace.js"></script>
 
 </html>
