--- a/client/Breed.html
+++ b/client/Breed.html
@@ -153,7 +153,8 @@
 
     <div class="footer">
         <footer>
-            <p>Ivan on Tech Academy Bootcamp July 2020</p>
+          <p>Built By Mark Watson</p>
+          <p>Ivan on Tech Academy</p>
         </footer>
     </div>
 
