--- a/client/Factory.html
+++ b/client/Factory.html
@@ -281,7 +281,8 @@
 
 
     <footer calss="footer" align="center">
-        <p>Ivan on Tech Academy Bootcamp July 2020</p>
+      <p>Built By Mark Watson</p>
+      <p>Ivan on Tech Academy</p>
     </footer>
 
   </body>
