--- a/client/MyKitties.html
+++ b/client/MyKitties.html
@@ -101,7 +101,8 @@
 <!--Footer-->
     <div class="footer">
         <footer>
-            <p>Ivan on Tech Academy Bootcamp July 2020</p>
+          <p>Built By Mark Watson</p>
+          <p>Ivan on Tech Academy</p>
         </footer>
     </div>
 
