--- a/client/Marketplace.html
+++ b/client/Marketplace.html
@@ -62,6 +62,17 @@
     </nav>
 
 
+<!--Title Text-->
+    <div>
+        <div class="title">
+            <div align="center">
+              <h1 id="kitty-marketplace-header">Kitty Marketplace</h1>
+              <p id="cyber-marketplace-header">All Prices in Ether</p>
+            </div>
+        </div>
+    </div>
+
+
 <!--Set Kitty Price-->
     <div class="kitty-being-sold"></div>
 
@@ -76,7 +87,8 @@
 
     <div class="footer">
         <footer>
-            <p>Ivan on Tech Academy Bootcamp July 2020</p>
+          <p>Built By Mark Watson</p>
+          <p>Ivan on Tech Academy</p>
         </footer>
     </div>
 
