--- a/client/index.html
+++ b/client/index.html
@@ -87,7 +87,8 @@
   </div>
 
   <footer class="footer">
-      <p>Ivan on Tech Academy Bootcamp July 2020</p>
+      <p>Built By Mark Watson</p>
+      <p>Ivan on Tech Academy</p>
   </footer>
 
   </body>
