--- a/client/index.html
+++ b/client/index.html
@@ -39,9 +39,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="index.html"><span id="cyber-font-nav">Home</span><span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="Factory.html" id="myKitties"><span id="kitty-font">Kitty </span><span id="cyber-font-nav">Factory</span></a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="MyKitties.html" id="myKitties"><span id="kitty-font">My Kitties</span></a>
           </li>
@@ -77,11 +77,9 @@
 
   <div class="row">
     <div class="col-sm-12" id="middle-cell">
-      <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-        ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-        anim id est laborum.</h2>
+      <h2>Welcome to Cyber Kitties, where you can own, breed, sell and buy these beautiful little kitties all using the Ethereum network.
+      This site is to show one of the many ways in which blockchain technology and the Ethereum Network can be used in a fun and easy way.
+      Enjoy owning your unique and beautiful digital Kitty!!!</h2>
 
     </div>
   </div>
