--- a/client/Breed.html
+++ b/client/Breed.html
@@ -34,9 +34,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="index.html"><span id="cyber-font-nav">Home</span><span class="sr-only">(current)</span></a>
           </li>
-          <!-- <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="Factory.html" id="myKitties"><span id="kitty-font">Kitty </span><span id="cyber-font-nav">Factory</span></a>
-          </li> -->
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="MyKitties.html" id="myKitties"><span id="kitty-font">My Kitties</span></a>
           </li>
@@ -166,10 +166,12 @@
 
   <script src="assets/js/web3.min.js"></script>
   <script src="./abi.js"></script>
+  <script src="./abiMarketplace.js"></script>
   <script src="./main.js"></script>
   <script src="assets/js/colors.js"></script>
   <script src="assets/js/catSettings.js"></script>
   <script src="assets/js/catFactory.js"></script>
+  <script src="assets/js/marketplace.js"></script>
   <script src="assets/js/displayKitties.js"></script>
   <script src="assets/js/breeder.js"></script>
 
