--- a/client/Factory.html
+++ b/client/Factory.html
@@ -38,9 +38,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="index.html"><span id="cyber-font-nav">Home</span><span class="sr-only">(current)</span></a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="Factory.html" id="myKitties"><span id="kitty-font">Kitty </span><span id="cyber-font-nav">Factory</span></a>
-        </li> -->
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="MyKitties.html" id="myKitties"><span id="kitty-font">My Kitties</span></a>
         </li>
