limit access to kitty factory
only contract owner will have access to kitty factory

--- a/client/Factory.html
+++ b/client/Factory.html
@@ -39,7 +39,9 @@
           <a class="nav-link" href="index.html"><span id="cyber-font-nav">Home</span><span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Factory.html" id="myKitties"><span id="kitty-font">Kitty </span><span id="cyber-font-nav">Factory</span></a>
+          <div class="factoryBtn">
+          <!-- <a class="nav-link" href="Factory.html" id="myKitties"><span id="kitty-font">Kitty </span><span id="cyber-font-nav">Factory</span></a> -->
+          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="MyKitties.html" id="myKitties"><span id="kitty-font">My Kitties</span></a>
@@ -286,7 +288,8 @@
     </footer>
 
   </body>
-  <script src="./index.js"></script>
+  <script src="./main.js"></script>
+  <script src="assets/js/kittyFactory.js"></script>
   <script src="assets/js/colors.js"></script>
   <script src="assets/js/catSettings.js"></script>
   <script src="assets/js/catFactory.js"></script>
