--- a/client/index.html
+++ b/client/index.html
@@ -80,7 +80,7 @@
   <div class="row">
     <div class="col-sm-12" id="middle-cell">
       <p>Please connect you MetakMask to the Ropsten Test Network</p>
-      <p>Once you are connect to the network a cute little kitty should peak its little head out up above</p>
+      <p>Once you are connected to the network a cute little kitty should peak its little head out up above</p>
       <h2>Welcome to Cyber Kitties, where you can own, breed, sell and buy these beautiful little kitties all using the Ethereum network.
       This site is to show one of the many ways in which blockchain technology and the Ethereum Network can be used in a fun and easy way.
       Enjoy owning your unique and beautiful digital Kitty!!!</h2>
